# object-transfer

./: LICENSE.md  Makefile  README.md  docker-compose.yml  go.work  go.work.sum
.github/workflows/: deploy.yml  rust_deploy.yml  test.yml  test_go.yml  test_rust.yml
go/: .gitignore  Makefile  README.md  go.mod  go.sum
go/ack/: interface.go
go/brokers/: brokers_suite_test.go
go/errors/: ack.go  broker.go  pub.go  sub.go  unsub.go
go/format/: format.go
go/interfaces/: ack.go  pub.go  pubctx.go  sub.go  subctx.go  subopt.go  unsub.go
go/nats/: ack.go  errors.go  nats_test.go  pubctx.go  subctx.go
go/noop/: ack.go  unsub.go
go/publisher/: interface.go  publisher.go  publisher_test.go
go/redis/: ack.go  group_make.go  redis_test.go
go/subscriber/: interface.go  option.go  subscriber.go  subscriber_suite_test.go  subscriber_test.go
rust/: Cargo.toml  Makefile  README.md  prompt_nats.md
rust/src/: ack_noop.rs  brokers.rs  encoder.rs  encoders.rs  enum.rs  error.rs  errors.rs  format.rs  format_fn.rs  lib.rs  nats.rs  options.rs  pub.rs  publisher.rs  redis.rs  sub.rs  subscriber.rs  tests.rs  traits.rs  unsub_noop.rs
rust/src/brokers/: nats.rs  redis.rs  traits.rs
rust/src/brokers/nats/: errors.rs  impl_ack.rs  impl_ctx.rs  options.rs  sub_fetcher.rs  tests.rs
rust/src/brokers/redis/: config.rs  publisher.rs  subscriber.rs  tests.rs
rust/src/brokers/redis/config/: publish.rs  subscribe.rs
rust/src/encoder/: json.rs  msgpack.rs  traits.rs
rust/src/encoders/: json.rs  msgpack.rs  traits.rs
rust/src/errors/: ack.rs  broker.rs  decode.rs  encode.rs  pub.rs  sub.rs  unsub.rs
rust/src/nats/: errors.rs  impl_ack.rs  impl_ctx.rs  options.rs  pub.rs  sub.rs  sub_fetcher.rs  tests.rs
rust/src/redis/: ack.rs  errors.rs  group_make.rs  publisher.rs  publisher_config.rs  subscriber.rs  tests.rs
rust/src/redis/config/: publish.rs  subscribe.rs
rust/src/tests/: entity.rs  error.rs  pub_sub.rs  stream.rs  subscribe.rs
rust/tests/: pub_sub.rs
(+26 files in other folders)
