[package]
name = "object_transfer"
version = "0.1.0"
edition = "2024"

[dependencies]
async-nats = "0.45"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.1"
futures = "0.3"
thiserror = "2.0"
async-trait = "0.1"
bytes = "1.10.1"
async-stream = "0.3.6"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
mockall = "0.13.1"
