[package]
name = "object_transfer"
version = "0.0.0"
edition = "2024"
authors = ["Hiroaki Yamamoto"]
description = "An object transfer library for various message broker and/or protocols"
readme = "README.md"
license = "MIT"
license-file = "../LICENSE.md"
homepage = "https://github.com/hiroaki-yamamoto/object-transfer"
repository = "https://github.com/hiroaki-yamamoto/object-transfer"
categories = ["network-programming", "asynchronous", "web-programming"]
keywords = ["serialization", "deserialization", "nats", "redis", "pubsub"]

[features]
nats = ["dep:async-nats"]
redis = ["dep:redis", "redis?/aio", "redis?/tokio-comp", "redis?/streams"]
default = ["nats", "redis"]


[dependencies]
async-nats = { version = "0.45", optional = true }
redis = { version = "1.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.1"
futures = "0.3"
thiserror = "2.0"
async-trait = "0.1"
bytes = "1.10.1"
async-stream = "0.3.6"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
mockall = "0.14.0"
static_assertions = "1.1.0"
